Readme and artifacts update